--- a/Demo/AppLordDemo/AppLordDemo/Info.plist
+++ b/Demo/AppLordDemo/AppLordDemo/Info.plist
@@ -51,5 +51,48 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>ALLaunchTasks</key>
+	<array>
+		<dict>
+			<key>className</key>
+			<string>Task1</string>
+			<key>optional</key>
+			<false/>
+			<key>dependency</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>className</key>
+			<string>Task2</string>
+			<key>optional</key>
+			<false/>
+			<key>dependency</key>
+			<string>Task1</string>
+		</dict>
+		<dict>
+			<key>className</key>
+			<string>Task3</string>
+			<key>optional</key>
+			<false/>
+			<key>dependency</key>
+			<string>Task1</string>
+		</dict>
+		<dict>
+			<key>className</key>
+			<string>Task4</string>
+			<key>optional</key>
+			<false/>
+			<key>dependency</key>
+			<string>Task2,Task3</string>
+		</dict>
+		<dict>
+			<key>className</key>
+			<string>Task5</string>
+			<key>optional</key>
+			<false/>
+			<key>dependency</key>
+			<string>Task4</string>
+		</dict>
+	</array>
 </dict>
 </plist>
