简化module, 添加存储

--- a/Demo/AppLordDemo/AppLordDemo/Info.plist
+++ b/Demo/AppLordDemo/AppLordDemo/Info.plist
@@ -56,6 +56,8 @@
 		<dict>
 			<key>className</key>
 			<string>Task1</string>
+			<key>sync</key>
+			<true/>
 		</dict>
 		<dict>
 			<key>className</key>
